vm_eval.c
@@ -913,6 +913,7 @@ send_internal(int argc, const VALUE *argv, VALUE recv, call_type scope)
 	    }
 	}
 	id = idMethodMissing;
+	th->method_missing_reason = MISSING_NOENTRY;
     }
     else {
 	argv++; argc--;
